[gd_scene load_steps=8 format=3 uid="uid://cwdrfftcqrwx4"]

[ext_resource type="Script" path="res://Scenes/LevelMenu.gd" id="1_kb4pw"]
[ext_resource type="FontFile" uid="uid://dtreqxrld72uy" path="res://Graphics/High Speed.ttf" id="1_lb62y"]
[ext_resource type="Texture2D" uid="uid://cgt34fbypunff" path="res://Graphics/menubackground.png" id="2_j4uw3"]
[ext_resource type="Texture2D" uid="uid://befefgif2j022" path="res://Graphics/level1.png" id="5_cnr7c"]
[ext_resource type="Texture2D" uid="uid://cxydprm58bblk" path="res://Graphics/level2.png" id="6_0jghr"]
[ext_resource type="Texture2D" uid="uid://kaymleewqv6q" path="res://Graphics/istockphoto-1345388323-612x612.png" id="6_5demd"]
[ext_resource type="Texture2D" uid="uid://0hbg7dr6vwyp" path="res://Graphics/level3.png" id="7_p5hoh"]

[node name="Levelmenu" type="Node2D"]
script = ExtResource("1_kb4pw")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(575.5, 324)
scale = Vector2(0.600521, 0.6)
texture = ExtResource("2_j4uw3")

[node name="Sprite2D" type="Sprite2D" parent="Background"]
position = Vector2(743.077, -369.231)
scale = Vector2(0.307692, 0.307692)
texture = ExtResource("6_5demd")

[node name="rank" type="Label" parent="Background/Sprite2D"]
anchors_preset = -1
anchor_left = -3.88024
offset_left = -1080.0
offset_top = -265.0
offset_right = -366.0
offset_bottom = -43.0
theme_override_fonts/font = ExtResource("1_lb62y")
theme_override_font_sizes/font_size = 150
text = "Rank 1"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="xp" type="Label" parent="Background/Sprite2D"]
anchors_preset = -1
anchor_left = -3.68663
offset_left = -1090.0
offset_top = -15.0
offset_right = -376.0
offset_bottom = 207.0
theme_override_fonts/font = ExtResource("1_lb62y")
theme_override_font_sizes/font_size = 150
text = "0 XP"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -220.0
offset_right = -960.0
offset_bottom = -793.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Level1" type="Button" parent="Background/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
button_mask = 3
flat = true

[node name="Label" type="Label" parent="Background/MarginContainer/HBoxContainer/Level1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -138.0
offset_top = -75.0
offset_right = 138.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_lb62y")
theme_override_font_sizes/font_size = 50
text = "Level 1"

[node name="Level4" type="Sprite2D" parent="Background/MarginContainer/HBoxContainer/Level1"]
position = Vector2(284.71, 208.333)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_cnr7c")

[node name="Level2" type="Button" parent="Background/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="Label" type="Label" parent="Background/MarginContainer/HBoxContainer/Level2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -138.0
offset_top = -75.0
offset_right = 138.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_lb62y")
theme_override_font_sizes/font_size = 50
text = "Level 2"

[node name="Level1" type="Sprite2D" parent="Background/MarginContainer/HBoxContainer/Level2"]
position = Vector2(286.167, 206.667)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_0jghr")

[node name="Level3" type="Button" parent="Background/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="Label" type="Label" parent="Background/MarginContainer/HBoxContainer/Level3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -138.0
offset_top = -75.0
offset_right = 138.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_lb62y")
theme_override_font_sizes/font_size = 50
text = "Level 3"

[node name="Level1" type="Sprite2D" parent="Background/MarginContainer/HBoxContainer/Level3"]
position = Vector2(289.29, 206.667)
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_p5hoh")

[node name="Button" type="Button" parent="Background"]
offset_left = -893.391
offset_top = 426.667
offset_right = -751.391
offset_bottom = 488.667
theme_override_fonts/font = ExtResource("1_lb62y")
theme_override_font_sizes/font_size = 30
text = "Back"
flat = true

[node name="Scrap" type="Label" parent="."]
offset_left = 83.0
offset_top = 52.0
offset_right = 280.0
offset_bottom = 97.0
theme_override_fonts/font = ExtResource("1_lb62y")
theme_override_font_sizes/font_size = 30
text = "Scrap: 0"

[connection signal="pressed" from="Background/MarginContainer/HBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Background/MarginContainer/HBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Background/MarginContainer/HBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Background/Button" to="." method="_on_button_pressed"]
